--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Movie QL",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/DongeunPaeng/movieQL/issues"
   },
-  "homepage": "https://github.com/DongeunPaeng/movieQL#readme"
+  "homepage": "https://github.com/DongeunPaeng/movieQL#readme",
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "graphql-yoga": "^1.18.3",
+    "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {
+    "babel-node": "0.0.1-security",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "nodemon": "^2.0.4"
+  }
 }
